syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "proto/google/type/date.proto";
import "proto/google/type/latlng.proto";

option go_package = "my-protobuf/protogen/basic";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_FEMALE = 1;
  GENDER_MALE = 2;
}

message User {
  uint32 id = 1;
  string username = 2;
  bool is_active = 3 [json_name = "is_active"];
  bytes password = 4;

  repeated string emails = 16; // Penomoran tidak harus urut, nomor lebih besar dr 15 biasanya untuk field yg jarang digunakan
  Gender gender = 17;
  Address address = 18;

  google.protobuf.Any communication_channel = 19 [json_name = "communication_channel"];

  oneof electronic_com_channel {
    SocialMedia social_media = 20 [json_name = "social_media"];
    InstantMessaging instant_messaging = 21 [json_name = "instant_messaging"];
  }

  map<string, uint32> skill_rating = 22 [json_name = "skill_rating"];

  google.protobuf.Timestamp last_login = 23 [json_name = "last_login"];
  google.type.Date birth_date = 24 [json_name = "birth_date"];
  google.type.LatLng last_location = 25 [json_name = "last_location"];
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;

  Coordinate coordinate = 16;
  message Coordinate {
    double latitude = 1;
    double longitude = 2;
  }
}

message PaperMail {
  string paper_mail_address = 1 [json_name = "paper_mail_address"];
}

message SocialMedia {
  string platform = 1;
  string username = 2;
}

message InstantMessaging {
  string product = 1;
  string username = 2;
}